--- a/dist.ini
+++ b/dist.ini
@@ -2,8 +2,25 @@ name = Task-MusicBundle
 
 [@Basic]
 [VersionFromModule]
+[MinimumPerl]
+[AutoPrereqs]
+
+[CheckChangesHasContent]
 [NextRelease]
+format = %-5v %{yyyy-MM-dd}d
+
+[Authority]
+[PkgVersion]
 [PodWeaver]
+
+[PodCoverageTests]
+[PodSyntaxTests]
+[NoTabsTests]
+[EOLTests]
+[Test::Compile]
+
+[MetaConfig]
+[MetaJSON]
 
 [MetaResources]
 bugtracker.web  = https://rt.cpan.org/Public/Dist/Display.html?Name={{$dist->name}}
@@ -40,6 +57,7 @@ Music::Duration = 0
 Music::Gestalt = 0
 Music::Harmonics = 0
 Music::LilyPondUtil = 0
+Music::NeoRiemannianTonnetz = 0
 Music::Scales = 0
 Music::Tempo = 0
 Music::Tension = 0
