--- a/META.yml
+++ b/META.yml
@@ -3,13 +3,13 @@ abstract: 'A bundle of MIDI and music modules'
 author:
   - 'Gene Boggs <gene@cpan.org>'
 build_requires:
-  File::Find: 0
-  File::Temp: 0
+  IO::Handle: 0
+  IPC::Open3: 0
   Test::More: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300030, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.130880'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -35,6 +35,7 @@ requires:
   Music::Chord::Namer: 0
   Music::Chord::Note: 0
   Music::Chord::Positions: 0
+  Music::ChordBot: 0
   Music::Duration: 0
   Music::Gestalt: 0
   Music::Harmonics: 0
@@ -48,10 +49,7 @@ requires:
   perl: 5.006
   strict: 0
   warnings: 0
-resources:
-  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name={{$dist->name}}
-  repository: https://github.com/ology/REPO/tree/master/{{$dist->name}}
-version: 0.02
+version: 0.03
 x_Dist_Zilla:
   perl:
     version: 5.010000
@@ -59,59 +57,59 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Basic/GatherDir'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Basic/PruneCruft'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Basic/ManifestSkip'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Basic/MetaYAML'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::License
       name: '@Basic/License'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Basic/Readme'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Basic/ExtraTests'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Basic/ExecDir'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Basic/ShareDir'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MakeMaker
       name: '@Basic/MakeMaker'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Basic/Manifest'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Basic/TestRelease'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Basic/ConfirmRelease'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Basic/UploadToCPAN'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::VersionFromModule
       name: VersionFromModule
@@ -123,7 +121,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: AutoPrereqs
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::CheckChangesHasContent
       name: CheckChangesHasContent
@@ -131,7 +129,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: NextRelease
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Authority
       name: Authority
@@ -139,7 +137,7 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: PkgVersion
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PodWeaver
       name: PodWeaver
@@ -147,11 +145,11 @@ x_Dist_Zilla:
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: PodCoverageTests
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: PodSyntaxTests
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::NoTabsTests
       name: NoTabsTests
@@ -162,24 +160,26 @@ x_Dist_Zilla:
       version: 0.02
     -
       class: Dist::Zilla::Plugin::Test::Compile
+      config:
+        Dist::Zilla::Plugin::Test::Compile:
+          module_finder:
+            - ':InstallModules'
+          script_finder:
+            - ':ExecFiles'
       name: Test::Compile
-      version: 2.001
+      version: 2.025
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: MetaJSON
-      version: 4.300030
-    -
-      class: Dist::Zilla::Plugin::MetaResources
-      name: MetaResources
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::Test::PodSpelling
       name: Test::PodSpelling
-      version: 2.004001
+      version: 2.006000
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -187,34 +187,34 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300030
+      version: 4.300034
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300030
+      version: 4.300034
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
       is_trial: 0
-    version: 4.300030
+    version: 4.300034
 x_authority: cpan:GENE
