--- a/dist.ini
+++ b/dist.ini
@@ -22,11 +22,6 @@ format = %-5v %{yyyy-MM-dd}d
 [MetaConfig]
 [MetaJSON]
 
-[MetaResources]
-bugtracker.web  = https://rt.cpan.org/Public/Dist/Display.html?Name={{$dist->name}}
-repository.web  = https://github.com/ology/REPO/tree/master/{{$dist->name}}
-repository.type = git
-
 [Test::PodSpelling]
 wordlist  = Pod::Wordlist
 spell_cmd = aspell list
@@ -50,6 +45,7 @@ MIDI::Trans = 0
 MIDI::Tweaks = 0
 Music::AtonalUtil = 0
 Music::Canon = 0
+Music::ChordBot = 0
 Music::Chord::Namer = 0
 Music::Chord::Note = 0
 Music::Chord::Positions = 0
