--- a/META.yml
+++ b/META.yml
@@ -3,183 +3,265 @@ abstract: 'A bundle of MIDI and music modules'
 author:
   - 'Gene Boggs <gene@cpan.org>'
 build_requires:
-  IO::Handle: 0
-  IPC::Open3: 0
-  Test::More: 0
+  File::Spec: '0'
+  IO::Handle: '0'
+  IPC::Open3: '0'
+  Test::More: '0'
+  perl: '5.006'
 configure_requires:
-  ExtUtils::MakeMaker: 6.30
+  ExtUtils::MakeMaker: '6.30'
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300034, CPAN::Meta::Converter version 2.130880'
+generated_by: 'Dist::Zilla version 5.019, CPAN::Meta::Converter version 2.141170'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Task-MusicBundle
 requires:
-  Acme::Vuvuzela: 0
-  App::Music::PlayTab: 0
-  App::MusicTools: 0
-  File::Format::RIFF: 0
-  MIDI: 0
-  MIDI::Morph: 0
-  MIDI::Pitch: 0
-  MIDI::Praxis::Variation: 0
-  MIDI::Simple::Drummer: 0
-  MIDI::SoundFont: 0
-  MIDI::Tab: 0
-  MIDI::Tools: 0
-  MIDI::Trans: 0
-  MIDI::Tweaks: 0
-  Music::AtonalUtil: 0
-  Music::Canon: 0
-  Music::Chord::Namer: 0
-  Music::Chord::Note: 0
-  Music::Chord::Positions: 0
-  Music::ChordBot: 0
-  Music::Duration: 0
-  Music::Gestalt: 0
-  Music::Harmonics: 0
-  Music::LilyPondUtil: 0
-  Music::NeoRiemannianTonnetz: 0
-  Music::Scales: 0
-  Music::Tempo: 0
-  Music::Tension: 0
-  String::Approx: 0
-  Text::Chord::Piano: 0
-  perl: 5.006
-  strict: 0
-  warnings: 0
-version: 0.03
+  Acme::Vuvuzela: '0'
+  App::Music::PlayTab: '0'
+  App::MusicTools: '0'
+  File::Format::RIFF: '0'
+  MIDI: '0'
+  MIDI::Morph: '0'
+  MIDI::Pitch: '0'
+  MIDI::Praxis::Variation: '0'
+  MIDI::Simple::Drummer: '0'
+  MIDI::SoundFont: '0'
+  MIDI::Tab: '0'
+  MIDI::Tools: '0'
+  MIDI::Trans: '0'
+  MIDI::Tweaks: '0'
+  Music::AtonalUtil: '0'
+  Music::Canon: '0'
+  Music::Chord::Namer: '0'
+  Music::Chord::Note: '0'
+  Music::Chord::Positions: '0'
+  Music::ChordBot: '0'
+  Music::Duration: '0'
+  Music::Gestalt: '0'
+  Music::Harmonics: '0'
+  Music::LilyPondUtil: '0'
+  Music::NeoRiemannianTonnetz: '0'
+  Music::Scales: '0'
+  Music::Tempo: '0'
+  Music::Tension: '0'
+  String::Approx: '0'
+  Text::Chord::Piano: '0'
+  perl: '5.006'
+  strict: '0'
+  warnings: '0'
+version: '0.0301'
 x_Dist_Zilla:
   perl:
-    version: 5.010000
+    version: '5.018001'
   plugins:
     -
       class: Dist::Zilla::Plugin::GatherDir
       name: '@Basic/GatherDir'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::PruneCruft
       name: '@Basic/PruneCruft'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::ManifestSkip
       name: '@Basic/ManifestSkip'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::MetaYAML
       name: '@Basic/MetaYAML'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::License
       name: '@Basic/License'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::Readme
       name: '@Basic/Readme'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::ExtraTests
       name: '@Basic/ExtraTests'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::ExecDir
       name: '@Basic/ExecDir'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::ShareDir
       name: '@Basic/ShareDir'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::MakeMaker
+      config:
+        Dist::Zilla::Role::TestRunner:
+          default_jobs: 1
       name: '@Basic/MakeMaker'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::Manifest
       name: '@Basic/Manifest'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::TestRelease
       name: '@Basic/TestRelease'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::ConfirmRelease
       name: '@Basic/ConfirmRelease'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::UploadToCPAN
       name: '@Basic/UploadToCPAN'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::VersionFromModule
       name: VersionFromModule
-      version: 0.08
+      version: '0.08'
     -
       class: Dist::Zilla::Plugin::MinimumPerl
       name: MinimumPerl
-      version: 1.003
+      version: '1.003'
     -
       class: Dist::Zilla::Plugin::AutoPrereqs
       name: AutoPrereqs
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::CheckChangesHasContent
       name: CheckChangesHasContent
-      version: 0.006
+      version: '0.006'
     -
       class: Dist::Zilla::Plugin::NextRelease
       name: NextRelease
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::Authority
       name: Authority
-      version: 1.006
+      version: '1.006'
     -
       class: Dist::Zilla::Plugin::PkgVersion
       name: PkgVersion
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::PodWeaver
+      config:
+        Dist::Zilla::Plugin::PodWeaver:
+          finder:
+            - ':InstallModules'
+            - ':ExecFiles'
+          plugins:
+            -
+              class: Pod::Weaver::Plugin::EnsurePod5
+              name: '@CorePrep/EnsurePod5'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Plugin::H1Nester
+              name: '@CorePrep/H1Nester'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Plugin::SingleEncoding
+              name: '@Default/SingleEncoding'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Name
+              name: '@Default/Name'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Version
+              name: '@Default/Version'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Region
+              name: '@Default/prelude'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Generic
+              name: SYNOPSIS
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Generic
+              name: DESCRIPTION
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Generic
+              name: OVERVIEW
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Collect
+              name: ATTRIBUTES
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Collect
+              name: METHODS
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Collect
+              name: FUNCTIONS
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Leftovers
+              name: '@Default/Leftovers'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Region
+              name: '@Default/postlude'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Authors
+              name: '@Default/Authors'
+              version: '4.006'
+            -
+              class: Pod::Weaver::Section::Legal
+              name: '@Default/Legal'
+              version: '4.006'
       name: PodWeaver
-      version: 3.101641
+      version: '4.005'
     -
       class: Dist::Zilla::Plugin::PodCoverageTests
       name: PodCoverageTests
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::PodSyntaxTests
       name: PodSyntaxTests
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::NoTabsTests
+      config:
+        Dist::Zilla::Plugin::Test::NoTabs:
+          finder:
+            - ':InstallModules'
+            - ':ExecFiles'
+            - ':TestFiles'
       name: NoTabsTests
-      version: 0.01
+      version: '0.08'
     -
       class: Dist::Zilla::Plugin::EOLTests
       name: EOLTests
-      version: 0.02
+      version: '0.02'
     -
       class: Dist::Zilla::Plugin::Test::Compile
       config:
         Dist::Zilla::Plugin::Test::Compile:
+          filename: t/00-compile.t
           module_finder:
             - ':InstallModules'
           script_finder:
             - ':ExecFiles'
       name: Test::Compile
-      version: 2.025
+      version: '2.041'
     -
       class: Dist::Zilla::Plugin::MetaConfig
       name: MetaConfig
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::MetaJSON
       name: MetaJSON
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::Test::PodSpelling
       name: Test::PodSpelling
-      version: 2.006000
+      version: '2.006007'
     -
       class: Dist::Zilla::Plugin::Prereqs
       config:
@@ -187,34 +269,42 @@ x_Dist_Zilla:
           phase: runtime
           type: requires
       name: Prereqs
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':InstallModules'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':IncModules'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':TestFiles'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ExecFiles'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':ShareFiles'
-      version: 4.300034
+      version: '5.019'
     -
       class: Dist::Zilla::Plugin::FinderCode
       name: ':MainModule'
-      version: 4.300034
+      version: '5.019'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':AllFiles'
+      version: '5.019'
+    -
+      class: Dist::Zilla::Plugin::FinderCode
+      name: ':NoFiles'
+      version: '5.019'
   zilla:
     class: Dist::Zilla::Dist::Builder
     config:
-      is_trial: 0
-    version: 4.300034
+      is_trial: '0'
+    version: '5.019'
 x_authority: cpan:GENE
