--- a/dist.ini
+++ b/dist.ini
@@ -52,6 +52,7 @@ Music::Chord::Positions = 0
 Music::Duration = 0
 Music::Gestalt = 0
 Music::Harmonics = 0
+Music::Intervals = 0
 Music::LilyPondUtil = 0
 Music::NeoRiemannianTonnetz = 0
 Music::Scales = 0
