--- a/dist.ini
+++ b/dist.ini
@@ -15,7 +15,7 @@ format = %-5v %{yyyy-MM-dd}d
 
 [PodCoverageTests]
 [PodSyntaxTests]
-[NoTabsTests]
+[Test::NoTabs]
 [EOLTests]
 [Test::Compile]
 
@@ -55,6 +55,7 @@ Music::Harmonics = 0
 Music::Intervals = 0
 Music::LilyPondUtil = 0
 Music::NeoRiemannianTonnetz = 0
+Music::PitchNum = 0
 Music::Scales = 0
 Music::Tempo = 0
 Music::Tension = 0
